optimize Dockerfile